@@ -703,6 +703,7 @@ comment|// expected exception
 block|}
 block|}
 comment|// LUCENE-3590: fix off-by-one in subsequence, and fully obey interface
+comment|// LUCENE-4671: fix subSequence
 DECL|method|testCharSequenceSubSequence
 specifier|public
 name|void
@@ -710,14 +711,80 @@ name|testCharSequenceSubSequence
 parameter_list|()
 block|{
 name|CharSequence
-name|c
+name|sequences
+index|[]
 init|=
+block|{
 operator|new
 name|CharsRef
 argument_list|(
 literal|"abc"
 argument_list|)
+block|,
+operator|new
+name|CharsRef
+argument_list|(
+literal|"0abc"
+operator|.
+name|toCharArray
+argument_list|()
+argument_list|,
+literal|1
+argument_list|,
+literal|3
+argument_list|)
+block|,
+operator|new
+name|CharsRef
+argument_list|(
+literal|"abc0"
+operator|.
+name|toCharArray
+argument_list|()
+argument_list|,
+literal|0
+argument_list|,
+literal|3
+argument_list|)
+block|,
+operator|new
+name|CharsRef
+argument_list|(
+literal|"0abc0"
+operator|.
+name|toCharArray
+argument_list|()
+argument_list|,
+literal|1
+argument_list|,
+literal|3
+argument_list|)
+block|}
 decl_stmt|;
+for|for
+control|(
+name|CharSequence
+name|c
+range|:
+name|sequences
+control|)
+block|{
+name|doTestSequence
+argument_list|(
+name|c
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+DECL|method|doTestSequence
+specifier|private
+name|void
+name|doTestSequence
+parameter_list|(
+name|CharSequence
+name|c
+parameter_list|)
+block|{
 comment|// slice
 name|assertEquals
 argument_list|(
@@ -730,6 +797,42 @@ argument_list|(
 literal|0
 argument_list|,
 literal|1
+argument_list|)
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// mid subsequence
+name|assertEquals
+argument_list|(
+literal|"b"
+argument_list|,
+name|c
+operator|.
+name|subSequence
+argument_list|(
+literal|1
+argument_list|,
+literal|2
+argument_list|)
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// end subsequence
+name|assertEquals
+argument_list|(
+literal|"bc"
+argument_list|,
+name|c
+operator|.
+name|subSequence
+argument_list|(
+literal|1
+argument_list|,
+literal|3
 argument_list|)
 operator|.
 name|toString
