@@ -324,6 +324,8 @@ Bug Fixes
 
 * LUCENE-4662: Add missing elided articles and prepositions to FrenchAnalyzer's
   DEFAULT_ARTICLES list passed to ElisionFilter.  (David Leunen via Steve Rowe)
+
+* LUCENE-4671: Fix CharsRef.subSequence method.  (Tim Smith via Robert Muir)
     
 Changes in Runtime Behavior
   
